Fix bug where edges of social media icon characters are cut off on hover

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -91,6 +91,9 @@ nav {
   a {
     margin: 0 10px;
 
+    // This is used to prevent the edges of the icon character from being cut off
+    padding: 2px;
+
     &:hover {
       text-decoration: none;
       color: $baseTextColor;
